# claude-coach

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_agents_skills_mcp.py
backend/src/claude_coach/: __init__.py  cli.py  main.py
backend/src/claude_coach/api/: deps.py
backend/src/claude_coach/api/routes/: analytics.py  community.py  sessions.py
backend/src/claude_coach/core/: __init__.py  analyzer.py  anonymizer.py  error_analyzer.py  importer.py  insights.py  parser.py
backend/src/claude_coach/models/: __init__.py  analytics.py  database.py  session.py
backend/src/claude_coach/schemas/: analytics.py  community.py  session.py
backend/tests/: __init__.py  test_parser.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: analytics.ts  community.ts  sessions.ts
frontend/src/components/: Layout.tsx
frontend/src/context/: ProjectContext.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  ErrorAnalysis.tsx  Insights.tsx  SessionDetail.tsx  Sessions.tsx
